kubernetes/apps/base/development/backstage/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: backstage
  namespace: development
spec:
  parentRefs:
    - name: external
      namespace: kube-system
      sectionName: https
  hostnames:
    - 'backstage.${CLUSTER_DOMAIN}'
  rules:
    - backendRefs:
        - name: backstage
          port: 7007
          weight: 100
