kubernetes/apps/base/development/backstage/app/virtualservice.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.raspbernetes.com/networking.istio.io/virtualservice_v1beta1.json
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: backstage
  namespace: development
  annotations:
    external-dns.alpha.kubernetes.io/target: '${CLOUDFLARED_INGRESS_DOMAIN}'
    external-dns.alpha.kubernetes.io/external: 'false'
spec:
  hosts:
    - 'backstage.${CLUSTER_DOMAIN}'
  gateways:
    - istio-ingress/istio-ingressgateway
  http:
    - match:
        - uri:
            prefix: '/'
      route:
        - destination:
            port:
              number: 7007
            host: backstage.development.svc.cluster.local
